alignment resolved

--- a/fdahpStudyDesigner/src/main/webapp/css/style.css
+++ b/fdahpStudyDesigner/src/main/webapp/css/style.css
@@ -1773,9 +1773,7 @@ height:0px !important;
 }
 
 #studyAdminsTable th{
-	background:#e1e8ee !important;
-	padding-left: 10px !important;
-}
+	background:#e1e8ee !important;}
 
 #studyAdminsTable td{
 	padding-left: 10px !important;
